--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -333,14 +333,14 @@ hgroup {
   margin-bottom: 1.45rem;
 }
 ul {
-  margin-left: 1.45rem;
+  margin-left: 0;
   margin-right: 0;
   margin-top: 0;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 0;
   list-style-position: outside;
   list-style-image: none;
 }
@@ -509,6 +509,7 @@ th {
   font-weight: bold;
 }
 li {
+  margin-top: calc(1.45rem / 2);
   margin-bottom: calc(1.45rem / 2);
 }
 ol li {
